[decision-thyone] introduced Distinction + test